--- a/package.json
+++ b/package.json
@@ -8,5 +8,18 @@
     "com.vrchat.base": ">=3.2.2",
     "com.vrchat.avatars": ">=3.2.2",
     "jp.pokemori.vrm-converter-for-vrchat": "40.1.1"
+  },
+  "keywords": [
+    "VRChat",
+    "Editor Extension",
+    "Easy Avatar Uploader",
+    "VRM",
+    "Simplification",
+    "アバターアップローダー"
+  ],
+  "author": {
+    "name" : "SABU WORKS",
+    "email": "fu-suke.tm@outlook.jp",
+    "url": "https://www.uslog.tech/eauploader"
   }
 }
