--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "unity": "2019.4",
   "dependencies": {
     "com.vrchat.base": ">=3.2.2",
-    "com.vrchat.avatars": ">=3.2.2",
-    "jp.pokemori.vrm-converter-for-vrchat": "40.1.1"
+    "com.vrchat.avatars": ">=3.2.2"
   },
   "keywords": [
     "VRChat",
