--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.8.2",
   "displayName": "Easy Avatar Uploader for VRChat",
   "description": "Tools for more concise and easier uploading of avatars. Under development",
-  "unity": "2019.4",
+  "unity": "2019.4 - 2022.3",
   "dependencies": {
     "com.vrchat.base": ">=3.2.2",
     "com.vrchat.avatars": ">=3.2.2"
