--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "com.sabuworks.eauploader",
-  "version": "0.9.3",
+  "name": "tech.uslog.eauploader",
+  "version": "0.9.4",
   "displayName": "Easy Avatar Uploader for VRChat",
   "description": "Tools for more concise and easier uploading of avatars. Under development",
   "unity": "2022.3",
