--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "tech.uslog.eauploader",
-  "version": "0.9.7",
+  "version": "0.9.72",
   "displayName": "Easy Avatar Uploader for VRChat",
-  "description": "Tools for more concise and easier uploading of avatars. Under development",
+  "description": "Tools for more concise and easier uploading of avatars.\nアバターを簡単に管理し、VRChatへアップロードするためのUnity簡易化ツールです。",
   "unity": "2022.3",
   "dependencies": {
     "com.vrchat.base": ">=3.2.2",
     "com.vrchat.avatars": ">=3.2.2"
+  },
+  "author":{
+    "name": "USLOG (fu-sasa & BreakingDawn514)",
+    "email": "fu-suke.tm@outlook.jp",
+    "url": "https://uslog.tech/eauploader"
   }
 }
