--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tech.uslog.eauploader",
-  "version": "0.9.8",
+  "version": "0.9.82",
   "displayName": "Easy Avatar Uploader for VRChat",
   "description": "Tools for more concise and easier uploading of avatars.\nアバターを簡単に管理し、VRChatへアップロードするためのUnity簡易化ツールです。",
   "unity": "2022.3",
@@ -9,7 +9,7 @@
     "com.vrchat.avatars": ">=3.2.2"
   },
   "author":{
-    "name": "USLOG (fu-sasa & BreakingDawn514)",
+    "name": "USLOG",
     "email": "fu-suke.tm@outlook.jp",
     "url": "https://uslog.tech/eauploader"
   }
