--- a/package.json
+++ b/package.json
@@ -14,5 +14,5 @@
     "url": "https://uslog.tech/eauploader"
   },
   "keywords": ["Editor", "Uploader"],
-  "url" : "https://github.com/Project-EAUploader/EAUploader-for-VRChat/releases/download/0.9.9/uslog.tech.eaploader.zip?"
+  "url" : "https://github.com/Project-EAUploader/EAUploader-for-VRChat/releases/download/v0.9.9/tech.uslog.eauploader.zip"
 }
