--- a/Runtime/EAUploader.asmdef
+++ b/Runtime/EAUploader.asmdef
@@ -9,6 +9,12 @@
     "precompiledReferences": [],
     "autoReferenced": true,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.vrchat.avatars",
+            "expression": "",
+            "define": "VRC_SDK3A"
+        }
+    ],
     "noEngineReferences": false
 }
