--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Tools for more concise and easier uploading of avatars.\nアバターを簡単に管理し、VRChatへアップロードするためのUnity簡易化ツールです。",
   "unity": "2022.3",
   "changelogUrl": "https://github.com/Project-EAUploader/EAUploader-for-VRChat/releases",
-  "dependencies": {
-    "com.vrchat.base": "3.6.0",
-    "com.vrchat.avatars": "3.6.0"
+  "vpmDependencies": {
+    "com.vrchat.base": "^3.6.0",
+    "com.vrchat.avatars": "^3.6.0"
   },
   "author": {
     "name": "USLOG",
